--- a/package.json
+++ b/package.json
@@ -31,12 +31,13 @@
     "@nestjs/mapped-types": "^1.0.1",
     "@nestjs/mercurius": "^10.0.9",
     "@nestjs/platform-fastify": "^8.4.4",
-    "@nestjs/swagger": "^5.2.1",
+    "@nestjs/swagger": "./node_modules/@nestjs/swagger",
     "@nestjs/typeorm": "^8.0.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "graphql": "^16.3.0",
     "mercurius": "^9.3.6",
+    "mqemitter-redis": "^5.0.0",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
