--- a/package.json
+++ b/package.json
@@ -33,16 +33,19 @@
     "@nestjs/platform-fastify": "^8.4.4",
     "@nestjs/swagger": "./node_modules/@nestjs/swagger",
     "@nestjs/typeorm": "^8.0.3",
+    "add": "^2.0.6",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "graphql": "^16.3.0",
     "mercurius": "^9.3.6",
+    "mercurius-integration-testing": "^4.0.0",
     "mqemitter-redis": "^5.0.0",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.2.45"
+    "typeorm": "^0.2.45",
+    "yarn": "^1.22.18"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
